[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My micro blog"
authors = ["Altair"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiobotocore = "^2.19.0"
fastapi = "^0.115.8"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
uvicorn = "^0.34.0"
pyjwt = "^2.10.1"
aiohttp = "^3.11.12"
python-dotenv = "^1.0.1"
aiosqlite = "^0.21.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-multipart = "^0.0.20"
elasticsearch = "^8.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
